--- a/src/components/UserInfo/UserInfo.css
+++ b/src/components/UserInfo/UserInfo.css
@@ -1,6 +1,6 @@
 .user-card {
     width: 300px;
-    height: 180px;
+    height: 100%;
     border: 1px solid #ccc;
     padding: 10px;
     text-align: center;
@@ -17,7 +17,6 @@
 }
 
 .about-button {
-    display: inline-block;
     padding: 10px 20px;
     background-color: #007bff;
     color: #fff;
