--- a/src/components/SearchInput/SearchInput.css
+++ b/src/components/SearchInput/SearchInput.css
@@ -4,15 +4,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 1140px;
-    height: 46px;
+    width: 100%;
+
 }
 
 .searchform__input {
     border-radius: 40px;
     background: #2F2F2F;
     color: #ffffff;
-    font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 17px;
