--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -21,3 +21,16 @@ header > a:hover {
 .header__link {
     font-size: 24px;
 }
+
+.footer__container {
+display: flex;
+flex-direction: column;
+background-color: #0d1116;
+align-items: center;
+}
+
+.footer__author {
+    color: #FFFF;
+    font-size: larger;
+    line-height: normal;
+}
