--- a/src/components/RepoDetails/RepoDetails.css
+++ b/src/components/RepoDetails/RepoDetails.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #2C2C32;
 }
 
 .RepoDetails__wrapper {
@@ -36,7 +37,7 @@
 }
 
 .RepoDetails__url {
-    font-size: 18px;
+    font-size: 22px;
     background-image: linear-gradient(
             to right,
             #1200ff,
